--- a/style.css
+++ b/style.css
@@ -124,9 +124,9 @@ a.navlink:hover {
 
 #discord {
   background-color: #131313;
-  width: 270px;
+  width: fit-content;
   height: 85px;
-  padding: 12px;
+  padding: 15px;
   border-radius: 15px;
   border-style: solid;
   border-width: 2px;
