--- a/style.css
+++ b/style.css
@@ -108,6 +108,16 @@ a.navlink:hover {
   text-decoration: none;
 }
 
+a.spotifylink {
+  color: rgb(30,215,96);
+  text-decoration: none;
+}
+
+a.spotifylink:hover {
+  color: rgb(22,157,69);
+  text-decoration: none;
+}
+
 /* Icons */
 /* Icons */
 /* Icons */
