--- a/style.css
+++ b/style.css
@@ -109,12 +109,12 @@ a.navlink:hover {
 }
 
 a.spotifylink {
-  color: rgb(30,215,96);
+  color: rgb(30, 215, 96);
   text-decoration: none;
 }
 
 a.spotifylink:hover {
-  color: rgb(22,157,69);
+  color: rgb(22, 157, 69);
   text-decoration: none;
 }
 
@@ -254,6 +254,11 @@ tr {
 
 #songlink {
   color: white;
+  text-decoration: none;
+}
+
+#songlink:hover {
+  color: rgb(190, 190, 190);
   text-decoration: none;
 }
 
