--- a/style.css
+++ b/style.css
@@ -7,37 +7,13 @@
 
 body {
   background-color: rgb(0, 0, 0);
-  color: black;
+  color: rgb(0, 0, 0);
   font-family: "Karla", monospace;
   font-size: 14px;
   background-image: url("./images/bg.webp");
   background-size: stretch;
   background-repeat: repeat-x repeat-y;
   -webkit-background-size: stretch;
-}
-
-.gradient-text {
-  background-image: linear-gradient(45deg, #ffb619, #ff641c);
-  background-clip: text;
-  background-size: 100%;
-  background-repeat: repeat;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-background-clip: text;
-  -moz-text-fill-color: transparent;
-}
-
-.gradient-text2 {
-  background-image: linear-gradient(45deg, #54ff9b, rgb(48, 255, 151));
-  background-clip: text;
-  background-size: 100%;
-  background-repeat: repeat;
-  text-align: center;
-  font-size: 15px;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-background-clip: text;
-  -moz-text-fill-color: transparent;
 }
 
 /* Type Colours */
@@ -166,11 +142,6 @@ a.ytlink:hover {
   display: inline;
 }
 
-.jxsnicon {
-  border-radius: 100px;
-  height: 30px;
-}
-
 #discord {
   background-color: #131313;
   width: fit-content;
@@ -188,11 +159,24 @@ a.ytlink:hover {
 
 .box {
   background-color: #000000;
-  border: 2px solid #313131;
+  border: 2px solid #181818;
   border-radius: 4px;
   color: white;
   padding: 10px 15px;
   margin: 4px;
+}
+
+.box3 {
+    display: flex;
+    background-color: rgb(20, 20, 20);
+    border-color: rgb(41, 41, 41);
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    text-align: center;
+    height: 50px;
+    width: 50px;
+    margin: 9px;
 }
 
 table {
@@ -230,8 +214,15 @@ tr {
 }
 
 #mainbox {
-  padding-top: 10px;
+  padding-top: 15px;
   padding-bottom: 0px;
+}
+
+#mainbox2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
 }
 
 /* Scrolling */
